--- a/leetcode_tasks.ipynb
+++ b/leetcode_tasks.ipynb
@@ -534,7 +534,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Replace Employee ID With The Unique Identifier"
+   ]
   },
   {
    "cell_type": "code",
