Advanced Select and Joins Part 1/2 Done

--- a/leetcode_tasks.ipynb
+++ b/leetcode_tasks.ipynb
@@ -3990,6 +3990,517 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Advanced Select and Joins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Number of Employees Which Report to Each Employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[9, 'Hercy', None, 43], [6, 'Alice', 9, 41], [4, 'Bob', 9, 36], [2, 'Winston', None, 37]]\n",
+    "employees = pd.DataFrame(data, columns=['employee_id', 'name', 'reports_to', 'age']) \\\n",
+    "    .astype({'employee_id': 'Int64', 'name': 'object', 'reports_to': 'Int64', 'age': 'Int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([\n",
+    "    StructField(\"employee_id\", IntegerType(), False),\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"reports_to\", IntegerType(), True),\n",
+    "    StructField(\"age\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
+    "employees_df = spark.createDataFrame(data, schema=schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-------+----------+---+\n",
+      "|employee_id|   name|reports_to|age|\n",
+      "+-----------+-------+----------+---+\n",
+      "|          9|  Hercy|      NULL| 43|\n",
+      "|          6|  Alice|         9| 41|\n",
+      "|          4|    Bob|         9| 36|\n",
+      "|          2|Winston|      NULL| 37|\n",
+      "+-----------+-------+----------+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "For this problem, we will consider a manager an employee who has at least 1 other employee reporting to them.\n",
+    "\n",
+    "Write a solution to report the ids and the names of all managers, the number of employees who report directly to them, and the average age of the reports rounded to the nearest integer.\n",
+    "\n",
+    "Return the result table ordered by employee_id.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employees_info = employees_df.filter(~employees_df['reports_to'].isNull()).groupBy('reports_to').agg(F.count_distinct(F.col('employee_id')).alias('no_emplyees'), F.round(F.avg(F.col('age')), 0).alias('avg_age'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 383,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-----------+-------+\n",
+      "|reports_to|no_emplyees|avg_age|\n",
+      "+----------+-----------+-------+\n",
+      "|         9|          2|   39.0|\n",
+      "+----------+-----------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_info.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-----+----------+---+----------+-----------+-------+\n",
+      "|employee_id| name|reports_to|age|reports_to|no_emplyees|avg_age|\n",
+      "+-----------+-----+----------+---+----------+-----------+-------+\n",
+      "|          9|Hercy|      NULL| 43|         9|          2|   39.0|\n",
+      "+-----------+-----+----------+---+----------+-----------+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employees_df.join(employees_info, employees_df['employee_id'] == employees_info['reports_to'], how='inner').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primary Department for Each Employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [['1', '1', 'N'], ['2', '1', 'Y'], ['2', '2', 'N'], ['3', '3', 'N'], ['4', '2', 'N'], ['4', '3', 'Y'],\n",
+    "        ['4', '4', 'N']]\n",
+    "employee = pd.DataFrame(data, columns=['employee_id', 'department_id', 'primary_flag']).astype(\n",
+    "    {'employee_id': 'Int64', 'department_id': 'Int64', 'primary_flag': 'object'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 387,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_df = spark.createDataFrame(employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-------------+------------+\n",
+      "|employee_id|department_id|primary_flag|\n",
+      "+-----------+-------------+------------+\n",
+      "|          1|            1|           N|\n",
+      "|          2|            1|           Y|\n",
+      "|          2|            2|           N|\n",
+      "|          3|            3|           N|\n",
+      "|          4|            2|           N|\n",
+      "|          4|            3|           Y|\n",
+      "|          4|            4|           N|\n",
+      "+-----------+-------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Employees can belong to multiple departments. When the employee joins other departments, they need to decide which department is their primary department. Note that when an employee belongs to only one department, their primary column is 'N'.\n",
+    "\n",
+    "Write a solution to report all the employees with their primary department. For employees who belong to one department, report their only department.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 403,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window_spec = Window.partitionBy(\"employee_id\").orderBy(F.desc(\"primary_flag\"), F.col(\"department_id\"))\n",
+    "employee_history = employee_df.withColumn(\"department_order\", F.row_number().over(window_spec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 405,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-------------+------------+----------------+\n",
+      "|employee_id|department_id|primary_flag|department_order|\n",
+      "+-----------+-------------+------------+----------------+\n",
+      "|          1|            1|           N|               1|\n",
+      "|          2|            1|           Y|               1|\n",
+      "|          2|            2|           N|               2|\n",
+      "|          3|            3|           N|               1|\n",
+      "|          4|            3|           Y|               1|\n",
+      "|          4|            2|           N|               2|\n",
+      "|          4|            4|           N|               3|\n",
+      "+-----------+-------------+------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_history.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+-------------+------------+----------------+\n",
+      "|employee_id|department_id|primary_flag|department_order|\n",
+      "+-----------+-------------+------------+----------------+\n",
+      "|          1|            1|           N|               1|\n",
+      "|          2|            1|           Y|               1|\n",
+      "|          3|            3|           N|               1|\n",
+      "|          4|            3|           Y|               1|\n",
+      "+-----------+-------------+------------+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "employee_history.filter((F.col('department_order') == 1) | (F.col('primary_flag') == 'Y')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Triangle Judgement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[13, 15, 30], [10, 20, 15]]\n",
+    "triangle = pd.DataFrame(data, columns=['x', 'y', 'z']).astype({'x': 'Int64', 'y': 'Int64', 'z': 'Int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle_df = spark.createDataFrame(triangle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 409,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+\n",
+      "|  x|  y|  z|\n",
+      "+---+---+---+\n",
+      "| 13| 15| 30|\n",
+      "| 10| 20| 15|\n",
+      "+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "triangle_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Report for every three line segments whether they can form a triangle.\n",
+    "\n",
+    "Return the result table in any order.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---+--------+\n",
+      "|  x|  y|  z|traingle|\n",
+      "+---+---+---+--------+\n",
+      "| 13| 15| 30|      No|\n",
+      "| 10| 20| 15|     Yes|\n",
+      "+---+---+---+--------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "triangle_df.withColumn('traingle', F.when((F.col('x') + F.col('y') > F.col('z')) &\n",
+    "                                          (F.col('x') + F.col('z') > F.col('y')) &\n",
+    "                                          (F.col('z') + F.col('y') > F.col('x')), 'Yes').otherwise('No')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Consecutive Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[1, 1], [2, 1], [3, 1], [4, 2], [5, 1], [6, 2], [7, 2]]\n",
+    "logs = pd.DataFrame(data, columns=['id', 'num']).astype({'id':'Int64', 'num':'Int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs_df = spark.createDataFrame(logs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 416,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+\n",
+      "| id|num|\n",
+      "+---+---+\n",
+      "|  1|  1|\n",
+      "|  2|  1|\n",
+      "|  3|  1|\n",
+      "|  4|  2|\n",
+      "|  5|  1|\n",
+      "|  6|  2|\n",
+      "|  7|  2|\n",
+      "+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "logs_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Find all numbers that appear at least three times consecutively.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
