Product Price at a Given Date 6/8 done

--- a/leetcode_tasks.ipynb
+++ b/leetcode_tasks.ipynb
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -4414,154 +4414,331 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# approach is to check the previous and 2nd prev value and if both are equal to val then "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 418,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = Window.orderBy(\"id\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logs_df = logs_df.withColumn('prev1_val', F.lag(F.col('num'), 1).over(w))\n",
+    "logs_df = logs_df.withColumn('prev2_val', F.lag(F.col('num'), 2).over(w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+---------+---------+\n",
+      "| id|num|prev1_val|prev2_val|\n",
+      "+---+---+---------+---------+\n",
+      "|  1|  1|     NULL|     NULL|\n",
+      "|  2|  1|        1|     NULL|\n",
+      "|  3|  1|        1|        1|\n",
+      "|  4|  2|        1|        1|\n",
+      "|  5|  1|        2|        1|\n",
+      "|  6|  2|        1|        2|\n",
+      "|  7|  2|        2|        1|\n",
+      "+---+---+---------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "logs_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+\n",
+      "|ConsecutiveNums|\n",
+      "+---------------+\n",
+      "|              1|\n",
+      "+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "logs_df.filter((F.col('num') == F.col('prev1_val')) & (F.col('num') == F.col('prev2_val'))).select(F.col('num').alias('ConsecutiveNums')).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Product Price at a Given Date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[1, 20, '2019-08-14'], [2, 50, '2019-08-14'], [1, 30, '2019-08-15'], [1, 35, '2019-08-16'],\n",
+    "        [2, 65, '2019-08-17'], [3, 20, '2019-08-18']]\n",
+    "\n",
+    "products = pd.DataFrame(data, columns=['product_id', 'new_price', 'change_date']).astype(\n",
+    "    {'product_id': 'Int64', 'new_price': 'Int64', 'change_date': 'datetime64[ns]'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products_df = spark.createDataFrame(products)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-------------------+\n",
+      "|product_id|new_price|        change_date|\n",
+      "+----------+---------+-------------------+\n",
+      "|         1|       20|2019-08-14 00:00:00|\n",
+      "|         2|       50|2019-08-14 00:00:00|\n",
+      "|         1|       30|2019-08-15 00:00:00|\n",
+      "|         1|       35|2019-08-16 00:00:00|\n",
+      "|         2|       65|2019-08-17 00:00:00|\n",
+      "|         3|       20|2019-08-18 00:00:00|\n",
+      "+----------+---------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "products_df.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Write a solution to find the prices of all products on 2019-08-16. Assume the price of all products before any change is 10.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filtered_products = products_df.filter(F.col('change_date') <= '2019-08-16')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 439,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-------------------+\n",
+      "|product_id|new_price|        change_date|\n",
+      "+----------+---------+-------------------+\n",
+      "|         1|       20|2019-08-14 00:00:00|\n",
+      "|         2|       50|2019-08-14 00:00:00|\n",
+      "|         1|       30|2019-08-15 00:00:00|\n",
+      "|         1|       35|2019-08-16 00:00:00|\n",
+      "+----------+---------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_products.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "window_spec = Window.partitionBy(\"product_id\").orderBy(F.col(\"change_date\").desc())\n",
+    "latest_price = filtered_products.withColumn(\"latest_price_no\", F.row_number().over(window_spec)).filter(F.col('latest_price_no') == 1).withColumn('latest_price', F.col('new_price'))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 446,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "|product_id|new_price|        change_date|latest_price_no|latest_price|\n",
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "|         1|       35|2019-08-16 00:00:00|              1|          35|\n",
+      "|         2|       50|2019-08-14 00:00:00|              1|          50|\n",
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "latest_price.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 444,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-------------------+\n",
+      "|product_id|new_price|        change_date|\n",
+      "+----------+---------+-------------------+\n",
+      "|         1|       20|2019-08-14 00:00:00|\n",
+      "|         2|       50|2019-08-14 00:00:00|\n",
+      "|         1|       30|2019-08-15 00:00:00|\n",
+      "|         1|       35|2019-08-16 00:00:00|\n",
+      "|         2|       65|2019-08-17 00:00:00|\n",
+      "|         3|       20|2019-08-18 00:00:00|\n",
+      "+----------+---------+-------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "products_df.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_products_df = products_df.select('product_id').distinct()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 448,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|product_id|\n",
+      "+----------+\n",
+      "|         1|\n",
+      "|         3|\n",
+      "|         2|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_products_df.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_products_df_total = all_products_df.join(latest_price, on='product_id', how='left')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 452,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "|product_id|new_price|        change_date|latest_price_no|latest_price|\n",
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "|         1|       35|2019-08-16 00:00:00|              1|          35|\n",
+      "|         3|     NULL|               NULL|           NULL|        NULL|\n",
+      "|         2|       50|2019-08-14 00:00:00|              1|          50|\n",
+      "+----------+---------+-------------------+---------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_products_df_total.show()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 457,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------------+\n",
+      "|product_id|latest_price|\n",
+      "+----------+------------+\n",
+      "|         1|          35|\n",
+      "|         3|          10|\n",
+      "|         2|          50|\n",
+      "+----------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_products_df_total.na.fill(10, 'latest_price').select(['product_id', 'latest_price']).show()"
+   ]
   },
   {
    "cell_type": "code",
