Advanced select and joins part done

--- a/leetcode_tasks.ipynb
+++ b/leetcode_tasks.ipynb
@@ -4741,6 +4741,574 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Last Person to Fit in the Bus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 458,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[5, 'Alice', 250, 1], [4, 'Bob', 175, 5], [3, 'Alex', 350, 2], [6, 'John Cena', 400, 3], [1, 'Winston', 500, 6],\n",
+    "        [2, 'Marie', 200, 4]]\n",
+    "queue = pd.DataFrame(data, columns=['person_id', 'person_name', 'weight', 'turn']).astype(\n",
+    "    {'person_id': 'Int64', 'person_name': 'object', 'weight': 'Int64', 'turn': 'Int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 459,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queue_df = spark.createDataFrame(queue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 460,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----------+------+----+\n",
+      "|person_id|person_name|weight|turn|\n",
+      "+---------+-----------+------+----+\n",
+      "|        5|      Alice|   250|   1|\n",
+      "|        4|        Bob|   175|   5|\n",
+      "|        3|       Alex|   350|   2|\n",
+      "|        6|  John Cena|   400|   3|\n",
+      "|        1|    Winston|   500|   6|\n",
+      "|        2|      Marie|   200|   4|\n",
+      "+---------+-----------+------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "queue_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "There is a queue of people waiting to board a bus. However, the bus has a weight limit of 1000 kilograms, so there may be some people who cannot board.\n",
+    "\n",
+    "Write a solution to find the person_name of the last person that can fit on the bus without exceeding the weight limit. The test cases are generated such that the first person does not exceed the weight limit.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----------+------+----+\n",
+      "|person_id|person_name|weight|turn|\n",
+      "+---------+-----------+------+----+\n",
+      "|        5|      Alice|   250|   1|\n",
+      "|        3|       Alex|   350|   2|\n",
+      "|        6|  John Cena|   400|   3|\n",
+      "|        2|      Marie|   200|   4|\n",
+      "|        4|        Bob|   175|   5|\n",
+      "|        1|    Winston|   500|   6|\n",
+      "+---------+-----------+------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "queue_df.orderBy('turn').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window_spec = Window.orderBy(F.col(\"turn\"))\n",
+    "cumsum_queue = queue_df.withColumn(\"cumsum\", F.sum(F.col('weight')).over(window_spec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----------+------+----+------+\n",
+      "|person_id|person_name|weight|turn|cumsum|\n",
+      "+---------+-----------+------+----+------+\n",
+      "|        5|      Alice|   250|   1|   250|\n",
+      "|        3|       Alex|   350|   2|   600|\n",
+      "|        6|  John Cena|   400|   3|  1000|\n",
+      "|        2|      Marie|   200|   4|  1200|\n",
+      "|        4|        Bob|   175|   5|  1375|\n",
+      "|        1|    Winston|   500|   6|  1875|\n",
+      "+---------+-----------+------+----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cumsum_queue.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+\n",
+      "|person_name|\n",
+      "+-----------+\n",
+      "|  John Cena|\n",
+      "+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cumsum_queue.filter(F.col('cumsum') <= 1000).orderBy(F.col('cumsum').desc()).select(F.col('person_name')).limit(1).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Count Salary Categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 471,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[3, 108939], [2, 12747], [8, 87709], [6, 91796]]\n",
+    "accounts = pd.DataFrame(data, columns=['account_id', 'income']).astype({'account_id':'Int64', 'income':'Int64'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accounts_df = spark.createDataFrame(accounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------+\n",
+      "|account_id|income|\n",
+      "+----------+------+\n",
+      "|         3|108939|\n",
+      "|         2| 12747|\n",
+      "|         8| 87709|\n",
+      "|         6| 91796|\n",
+      "+----------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "accounts_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Write a solution to calculate the number of bank accounts for each salary category. The salary categories are:\n",
+    "\n",
+    "\"Low Salary\": All the salaries strictly less than 20000. \"Average Salary\": All the salaries in the inclusive range (20000, 50000). \"High Salary\": All the salaries strictly greater than 50000.\n",
+    "\n",
+    "The result table must contain all three categories. If there are no accounts in a category, return 0.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 478,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories = accounts_df.withColumn('category', F.when(F.col('income') < 20000, 'Low Salary').when((F.col('income') >= 20000) & (F.col('income') <= 50000), 'Average Salary').when(F.col('income') > 50000, 'High Salary'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 479,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------+-----------+\n",
+      "|account_id|income|   category|\n",
+      "+----------+------+-----------+\n",
+      "|         3|108939|High Salary|\n",
+      "|         2| 12747| Low Salary|\n",
+      "|         8| 87709|High Salary|\n",
+      "|         6| 91796|High Salary|\n",
+      "+----------+------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "categories.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_summary = categories.groupBy('category').agg(F.count('category').alias('accounts_count '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 487,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+---------------+\n",
+      "|   category|accounts_count |\n",
+      "+-----------+---------------+\n",
+      "|High Salary|              3|\n",
+      "| Low Salary|              1|\n",
+      "+-----------+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "categories_summary.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 488,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_categories = spark.createDataFrame([\n",
+    "    Row(category='Low Salary'),\n",
+    "    Row(category='Average Salary'),\n",
+    "    Row(category='High Salary')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 489,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+\n",
+      "|      category|\n",
+      "+--------------+\n",
+      "|    Low Salary|\n",
+      "|Average Salary|\n",
+      "|   High Salary|\n",
+      "+--------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_categories.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 492,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = all_categories.join(categories_summary, on='category', how='left').na.fill(0, 'accounts_count ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 493,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+---------------+\n",
+      "|      category|accounts_count |\n",
+      "+--------------+---------------+\n",
+      "|   High Salary|              3|\n",
+      "|    Low Salary|              1|\n",
+      "|Average Salary|              0|\n",
+      "+--------------+---------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "result.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
